@@ -1,5 +1,6 @@
 package domain.estoque.entity;
 
+import java.time.LocalDateTime;
 import java.util.UUID;
 
 public class ItemEstoque {
@@ -7,25 +8,50 @@ public class ItemEstoque {
     private String nome;
     private int quantidadeTotal;
     private int quantidadeDisponivel;
+    private boolean ativo;
+    private final LocalDateTime dataCriacao;
+    private LocalDateTime dataAtualizacao;
 
     public ItemEstoque() {
         this.id = UUID.randomUUID().toString();
+        this.ativo = true;
+        this.dataCriacao = LocalDateTime.now();
+        this.dataAtualizacao = this.dataCriacao;
     }
 
     public ItemEstoque(String nome, int quantidadeTotal) {
-        if (nome == null || nome.trim().isEmpty()) {
-            throw new IllegalArgumentException("O nome do item é obrigatório.");
+        this(UUID.randomUUID().toString(), nome, quantidadeTotal);
+    }
+
+    public ItemEstoque(String id, String nome, int quantidadeTotal) {
+        validar(nome, quantidadeTotal);
+        if (id == null || id.isBlank()) {
+            throw new IllegalArgumentException("ID do item de estoque e obrigatorio.");
         }
-        if (quantidadeTotal < 0) {
-            throw new IllegalArgumentException("A quantidade não pode ser negativa.");
-        }
-        this.id = UUID.randomUUID().toString();
+        this.id = id;
         this.nome = nome;
         this.quantidadeTotal = quantidadeTotal;
         this.quantidadeDisponivel = quantidadeTotal;
+        this.ativo = true;
+        this.dataCriacao = LocalDateTime.now();
+        this.dataAtualizacao = this.dataCriacao;
+    }
+
+    public void atualizarDados(String nome, int quantidadeTotal) {
+        garantirAtivo();
+        validar(nome, quantidadeTotal);
+        int diferencaTotal = quantidadeTotal - this.quantidadeTotal;
+        this.nome = nome;
+        this.quantidadeTotal = quantidadeTotal;
+        this.quantidadeDisponivel = Math.max(0, this.quantidadeDisponivel + diferencaTotal);
+        if (this.quantidadeDisponivel > this.quantidadeTotal) {
+            this.quantidadeDisponivel = this.quantidadeTotal;
+        }
+        this.dataAtualizacao = LocalDateTime.now();
     }
 
     public void reservar(int quantidade) {
+        garantirAtivo();
         if (quantidade <= 0) {
             throw new IllegalArgumentException("Quantidade a reservar deve ser maior que zero.");
         }
@@ -33,6 +59,7 @@ public class ItemEstoque {
             throw new IllegalStateException("Quantidade insuficiente em estoque para reserva.");
         }
         this.quantidadeDisponivel -= quantidade;
+        this.dataAtualizacao = LocalDateTime.now();
     }
 
     public void liberarReserva(int quantidade) {
@@ -43,19 +70,55 @@ public class ItemEstoque {
         if (this.quantidadeDisponivel > this.quantidadeTotal) {
             this.quantidadeDisponivel = this.quantidadeTotal;
         }
+        this.dataAtualizacao = LocalDateTime.now();
     }
 
     public void adicionarEstoque(int quantidade) {
+        garantirAtivo();
         if (quantidade <= 0) {
             throw new IllegalArgumentException("Quantidade a adicionar deve ser maior que zero.");
         }
         this.quantidadeTotal += quantidade;
         this.quantidadeDisponivel += quantidade;
+        this.dataAtualizacao = LocalDateTime.now();
     }
 
-    // Getters
+    public void desativar() {
+        if (!this.ativo) {
+            throw new IllegalStateException("Item ja esta inativo.");
+        }
+        this.ativo = false;
+        this.dataAtualizacao = LocalDateTime.now();
+    }
+
+    public void reativar() {
+        if (this.ativo) {
+            throw new IllegalStateException("Item ja esta ativo.");
+        }
+        this.ativo = true;
+        this.dataAtualizacao = LocalDateTime.now();
+    }
+
+    private void validar(String nome, int quantidadeTotal) {
+        if (nome == null || nome.trim().isEmpty()) {
+            throw new IllegalArgumentException("O nome do item e obrigatorio.");
+        }
+        if (quantidadeTotal < 0) {
+            throw new IllegalArgumentException("A quantidade nao pode ser negativa.");
+        }
+    }
+
+    private void garantirAtivo() {
+        if (!this.ativo) {
+            throw new IllegalStateException("Operacao nao permitida em item inativo.");
+        }
+    }
+
     public String getId() { return id; }
     public String getNome() { return nome; }
     public int getQuantidadeTotal() { return quantidadeTotal; }
     public int getQuantidadeDisponivel() { return quantidadeDisponivel; }
+    public boolean isAtivo() { return ativo; }
+    public LocalDateTime getDataCriacao() { return dataCriacao; }
+    public LocalDateTime getDataAtualizacao() { return dataAtualizacao; }
 }
